spacing for header fixed, need to finalise font for page

--- a/src/components/pages/landing/Footer.module.css
+++ b/src/components/pages/landing/Footer.module.css
@@ -4,6 +4,7 @@
     padding: 20px;
     width: 100%;
     position: relative;
+    font-family: Inter;
 }
 
 .topSection {
