--- a/src/components/pages/landing/Gallery.module.css
+++ b/src/components/pages/landing/Gallery.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-around;
     padding: 20px;
+    font-family: Inter;
 }
 
 .tile {
