--- a/src/components/pages/landing/LandingHeader.module.css
+++ b/src/components/pages/landing/LandingHeader.module.css
@@ -7,7 +7,10 @@
 
 .topNav {
   background-color: #f7f5f4;
-  padding: 20px 290px 10px 440px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 280px;
+  padding-right: 150px;
   display: flex;
   justify-content: space-between;
   font-size: 14px;
@@ -36,8 +39,9 @@
 
 .mainNav {
   padding-top: 16px;
-  padding-left: 50px ;
-  padding-right: 50px;
+  padding-left: 150px ;
+  padding-right: 150px;
+  padding-bottom: 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
